第二次提交一些东西

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,13 +24,20 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    /* //noinspection GradleCompatible
+                compile 'com.android.support:appcompat-v7:25.3.1'*/
+    /* compile 'com.android.support.constraint:constraint-layout:1.0.2'*/
     testCompile 'junit:junit:4.12'
-    compile files('libs/autolayout.jar')
     //上拉加载下拉刷新https://segmentfault.com/a/1190000010066071
     compile 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.2-alpha-5'
-    compile 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.2-alpha-5'//如果使用了特殊的Header
+    compile 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.2-alpha-5'
+    //如果使用了特殊的Header
     //https://github.com/hongyangAndroid/baseAdapter
     compile 'com.zhy:base-rvadapter:3.0.3'
+    compile 'com.google.code.gson:gson:2.2.4'
+    //沉浸式状态栏 https://github.com/Zackratos/UltimateBar
+    compile 'org.zackratos:ultimatebar:1.0.3'
+    //
+    compile 'com.github.chenpengfei88:StatusLayout:1.0'
+
 }
