--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+//为注解框架添加
+apply plugin: 'com.neenbedankt.android-apt' //添加这行
 
 android {
     compileSdkVersion 25
@@ -18,6 +20,7 @@ android {
         }
     }
 }
+
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
@@ -39,5 +42,10 @@ dependencies {
     compile 'org.zackratos:ultimatebar:1.0.3'
     //
     compile 'com.github.chenpengfei88:StatusLayout:1.0'
+    //底部tab  https://github.com/Ashok-Varma/BottomNavigation
+    compile 'com.ashokvarma.android:bottom-navigation-bar:2.0.2'
+    //注解框架
+    compile 'com.jakewharton:butterknife:8.2.1' //添加这行
+    apt 'com.jakewharton:butterknife-compiler:8.2.1' //添加这行
 
 }
