--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "25.0.3"
     defaultConfig {
         applicationId "com.example.chenyuan.demo"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -20,8 +20,6 @@ android {
         }
     }
 }
-
-
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -47,5 +45,11 @@ dependencies {
     //注解框架
     compile 'com.jakewharton:butterknife:8.2.1' //添加这行
     apt 'com.jakewharton:butterknife-compiler:8.2.1' //添加这行
+    //banner页
+    compile 'com.github.czy1121:bannerview:1.0.1'
+
+    //glide
+    compile 'com.github.bumptech.glide:glide:4.0.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0'
 
 }
